# Legally

legal_assistant/: README.md  pyproject.toml  requirements.txt
legal_assistant/src/legal_assistant/: crew.py  main.py
legal_assistant/src/legal_assistant/config/: agents.yaml  tasks.yaml
legal_assistant/src/legal_assistant/database/chroma_db/: setup_vector_db.py
legal_assistant/src/legal_assistant/tools/: ipc_sections_search_tool.py  legal_precedent_search_tool.py
