[project]
name = "legal_assistant"
version = "0.1.0"
description = "legal_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
legal_assistant = "legal_assistant.main:run"
run_crew = "legal_assistant.main:run"
train = "legal_assistant.main:train"
replay = "legal_assistant.main:replay"
test = "legal_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
